--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "hot",
     "reload"
   ],
-
   "license": "MIT",
-
   "main": "./src/main/main.ts",
   "scripts": {
     "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
@@ -90,10 +88,12 @@
     }
   },
   "dependencies": {
+    "@types/mysql": "^2.15.21",
     "base-64": "^1.0.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.3",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
@@ -121,7 +121,7 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "detect-port": "^1.3.0",
-    "electron": "^18.2.3",
+    "electron": "^21.3.0",
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.2.1",
