--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "incremental": true,
     "target": "es2021",
     "module": "commonjs",
@@ -20,7 +21,8 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": "release/app/dist"
+    "outDir": "release/app/dist",
+    "emitDecoratorMetadata": true
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
 }
