--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
     "base-64": "^1.0.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
